[tool.poetry]
name = "django-mini2"
version = "0.1.0"
description = ""
authors = ["daeho <banana7907@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
